--- a/src/index.css
+++ b/src/index.css
@@ -251,6 +251,10 @@
     animation-delay: 4s;
   }
 
+  .animation-delay-3000 {
+    animation-delay: 3s;
+  }
+
   .animation-delay-100 {
     animation-delay: 0.1s;
   }
